# esp-brew-engine

components/brew-engine/: CMakeLists.txt  brew-engine.cpp  brew-engine.h  execution-step.h  max31865_driver.c  max31865_driver.h  temperature-sensor.h
shared_components/settings-manager/: settings-manager.cpp
shared_components/statistics-manager/: CMakeLists.txt  statistics-manager.cpp  statistics-manager.h
shared_components/wifi-connect/: wifi-connect.cpp  wifi-connect.h
web/locales/: de.json  en.json  nl.json
web/src/components/: TemperatureGauge.vue
web/src/helpers/: webConn.ts
web/src/interfaces/: IBrewSession.ts  IExecutionStep.ts  ISystemSettings.ts  ITempSensor.ts
web/src/layouts/default/: View.vue
web/src/router/: index.ts
web/src/views/: Control.vue  MashSchedules.vue  Statistics.vue  SystemSettings.vue  TempSettings.vue
